--- a/templates/clients/leads/lead_management.html
+++ b/templates/clients/leads/lead_management.html
@@ -10,9 +10,11 @@
     <a class="btn btn-warning btn-sm" href="{% url 'clients:lead_create' %}">+ Add Lead</a>
     {% if can_see_stats %}
       <a class="btn btn-outline-dark btn-sm" href="{% url 'clients:lead_progress_admin' %}">Team Progress</a>
-      <a class="btn btn-outline-primary btn-sm" href="{% url 'clients:lead_bulk_import' %}">Bulk Import</a>
-    {% elif request.user.employee.role == "employee" %}
+    {% elif request.user.employee.role == "employee" or request.user.employee.role == "manager" %}
       <a class="btn btn-outline-dark btn-sm" href="{% url 'clients:lead_progress_employee' %}">My Progress</a>
+    {% endif %}
+    {% if can_bulk_import %}
+      <a class="btn btn-outline-primary btn-sm" href="{% url 'clients:lead_bulk_import' %}">Bulk Import</a>
     {% endif %}
   </div>
 </div>
